# motioncam-fs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: motioncam-fs.desktop  motioncam.xml
dockerbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  motioncam-fs  qrc_resources.cpp
dockerbuild/motioncam-fs_autogen/: moc_predefs.h  mocs_compilation.cpp
dockerbuild/motioncam-fs_autogen/6YEA5652QU/: moc_SingleApplication.cpp  moc_SingleApplication.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
dockerbuild/motioncam-fs_autogen/include/: ui_mainwindow.h
include/: VirtualFileSystemImpl_MCRAW.h  mainwindow.h
include/linux/: FuseFileSystemImpl_Linux.h
src/: VirtualFileSystemImpl_MCRAW.cpp  mainwindow.cpp
src/linux/: FuseFileSystemImpl_Linux.cpp
